--- a/index.html
+++ b/index.html
@@ -28,14 +28,13 @@
 				</div>
       </div>
       <div class="column" style="width:18%"></div>
-		</div>
-    <div class="row">
-      <div class="column" style="width:48%">
+	
+      <div class="column">
 				<div class="content">
 					<img class="displayed" src="Three_views_Hipo_2.jpg"	alt="" style="width:100%">
 				</div>
       </div>
-      <div class="column" style="width:48%">
+      <div class="column">
 				<div class="content">
 					<img class="displayed" src="Three_views_Hipo_3.jpg"	alt="" style="width:100%">
 				</div>
@@ -45,22 +44,17 @@
     <h3>Urbanis</h3>
     <div class="row">
       <div class="column" style="width:18%"></div>
-      <div class="column" style="width:60%">
+      <div class="column">
 				<div class="content">
 					<img class="displayed" src="Clifton_bridge_underpass_1.jpg"	alt="" style="width:100%">
 				</div>
 			</div>
-    </div>
-    <div class="row">
-      <div class="column" style="width:60%">
+      <div class="column">
 				<div class="content">
 					<img class="displayed" src="Clifton_bridge_underpass_2.jpg"	alt="" style="width:100%">
 				</div>
 			</div>
-		</div>
-    <div class="row">
-      <div class="column" style="width:18%"></div>
-      <div class="column" style="width:60%">
+      <div class="column">
         <div class="content">
           <img src="Jazz_club_bar_kitchen.jpg" style="width:100%">
         </div>
