--- a/index.html
+++ b/index.html
@@ -21,13 +21,11 @@
 		<h2>Portfolio</h2>
 		<div class="row">
       <h3>3 views of a Hipo on Carlton Street</h3>
-      <div class="column" style="width:17%"></div>
-			<div class="column" style="width:48%">
+			<div class="column">
 				<div class="content">
 					<img  src="Three_views_Hipo_1.jpg"	alt="" style="width:100%">
 				</div>
       </div>
-      <div class="column" style="width:18%"></div>
 	
       <div class="column">
 				<div class="content">
