--- a/index.html
+++ b/index.html
@@ -23,38 +23,48 @@
       <h3>3 views of a Hipo on Carlton Street</h3>
 			<div class="column">
 				<div class="content">
-					<img  src="Three_views_Hipo_1.jpg"	alt="" style="width:100%">
-				</div>
-      </div>
-	
-      <div class="column">
-				<div class="content">
-					<img class="displayed" src="Three_views_Hipo_2.jpg"	alt="" style="width:100%">
+					<a href="Three_views_Hipo_1.jpg" target="_blank">
+            <img  src="Three_views_Hipo_1.jpg"	alt="" style="width:100%">
+          </a>
 				</div>
       </div>
       <div class="column">
 				<div class="content">
-					<img class="displayed" src="Three_views_Hipo_3.jpg"	alt="" style="width:100%">
+          <a href="Three_views_Hipo_2.jpg" target="_blank">
+		       <img class="displayed" src="Three_views_Hipo_2.jpg"	alt="" style="width:100%">
+          </a>
+        </div>
+      </div>
+      <div class="column">
+				<div class="content">
+          <a href="Three_views_Hipo_3.jpg" target="_blank">
+	          <img class="displayed" src="Three_views_Hipo_3.jpg"	alt="" style="width:100%">
+          </a>
 				</div>
       </div>
 		</div>
 
     <h3>Urbanis</h3>
     <div class="row">
-      <div class="column" style="width:18%"></div>
       <div class="column">
 				<div class="content">
-					<img class="displayed" src="Clifton_bridge_underpass_1.jpg"	alt="" style="width:100%">
-				</div>
+          <a href="Clifton_bridge_underpass_1.jpg" target="_blank">
+            <img class="displayed" src="Clifton_bridge_underpass_1.jpg"	alt="" style="width:100%">
+          </a>
+        </div>
 			</div>
       <div class="column">
 				<div class="content">
-					<img class="displayed" src="Clifton_bridge_underpass_2.jpg"	alt="" style="width:100%">
+					<a href="Clifton_bridge_underpass_2.jpg" target="_blank">
+            <img class="displayed" src="Clifton_bridge_underpass_2.jpg"	alt="" style="width:100%">
+          </a>
 				</div>
 			</div>
       <div class="column">
         <div class="content">
-          <img src="Jazz_club_bar_kitchen.jpg" style="width:100%">
+          <a href="Jazz_club_bar_kitchen.jpg" target="_blank">
+            <img src="Jazz_club_bar_kitchen.jpg" style="width:100%">
+          </a>
         </div>
       </div>
     </div>
