--- a/index.html
+++ b/index.html
@@ -68,6 +68,37 @@
         </div>
       </div>
     </div>
+
+    <h3>Hampton Landscapes</h3>
+    <div class="row">
+      <div class="column">
+        <div class="content">
+          <a href="Film_1.JPG">
+            <img src="Film_1.JPG" style="width:100%">
+          </a>
+        </div>
+      </div>
+      <div class="column">
+        <div class="content">
+          <a href="Film_2.JPG">
+            <img src="Film_2.JPG" style="width:100%">
+          </a>
+        </div>
+      </div>
+      <div class="column">
+        <div class="content">
+          <a href="Fog1.JPG">
+            <img src="Fog1.JPG" style="width:100%">
+          </a>
+        </div>
+      </div>
+      <div class="column">
+        <div class="content">
+          <a href="Fog2.JPG">
+            <img src="Fog2.JPG" style="width:100%">
+          </a>
+        </div>
+      </div>
 	</div>
 </body>
 
