--- a/index.html
+++ b/index.html
@@ -99,6 +99,13 @@
           </a>
         </div>
       </div>
+      <div class="column">
+        <div class="content">
+          <a href="Council-of_lamposts.JPG">
+            <img src="Council-of_lamposts.JPG" style="width:100%">
+          </a>
+        </div>
+      </div>
 	</div>
 </body>
 
