--- a/index.html
+++ b/index.html
@@ -19,94 +19,40 @@
 
 		<!-- Content of the body-->
 		<h2>Portfolio</h2>
+		<!--Exhibition 1-->
 		<div class="row">
-      <h3>3 views of a Hipo on Carlton Street</h3>
+			<h3>3 views of a Hipo on Carlton Street</h3>
+			<p class="comment">This series of photos are the first fruits of my experimentation with B&W photography.
+				I wanted to capture the motion of the light in my arrangement of the photos, along with how the two people captured in the scene moved through it.
+				The location is Carlton street in Hockley, Nottingham.
+				<br/><br/>
+				Camera details: Captured on my Nikon D3100 at 200 ISO, f/11, an aperture of 6.9, 1/40 shutter speed and at a 50mm focal length.
+		  </p>
+		</div>
+		<div class="row">
+
 			<div class="column">
 				<div class="content">
-					<a href="Three_views_Hipo_1.jpg" target="_blank">
-            <img  src="Three_views_Hipo_1.jpg"	alt="" style="width:100%">
+					<a href="Three_views_Hipo_3.jpg" target="_blank">
+            <img  src="Three_views_Hipo_3.jpg"	alt="" style="width:100%">
           </a>
 				</div>
       </div>
       <div class="column">
 				<div class="content">
           <a href="Three_views_Hipo_2.jpg" target="_blank">
-		       <img class="displayed" src="Three_views_Hipo_2.jpg"	alt="" style="width:100%">
+		       <img src="Three_views_Hipo_2.jpg"	alt="" style="width:100%">
           </a>
         </div>
       </div>
       <div class="column">
 				<div class="content">
-          <a href="Three_views_Hipo_3.jpg" target="_blank">
-	          <img class="displayed" src="Three_views_Hipo_3.jpg"	alt="" style="width:100%">
+          <a href="Three_views_Hipo_1.jpg" target="_blank">
+	          <img src="Three_views_Hipo_1.jpg"	alt="" style="width:100%">
           </a>
 				</div>
       </div>
 		</div>
-
-    <h3>Urbanis</h3>
-    <div class="row">
-      <div class="column">
-				<div class="content">
-          <a href="Clifton_bridge_underpass_1.jpg" target="_blank">
-            <img class="displayed" src="Clifton_bridge_underpass_1.jpg"	alt="" style="width:100%">
-          </a>
-        </div>
-			</div>
-      <div class="column">
-				<div class="content">
-					<a href="Clifton_bridge_underpass_2.jpg" target="_blank">
-            <img class="displayed" src="Clifton_bridge_underpass_2.jpg"	alt="" style="width:100%">
-          </a>
-				</div>
-			</div>
-      <div class="column">
-        <div class="content">
-          <a href="Jazz_club_bar_kitchen.jpg" target="_blank">
-            <img src="Jazz_club_bar_kitchen.jpg" style="width:100%">
-          </a>
-        </div>
-      </div>
-    </div>
-
-    <h3>Hampton Landscapes</h3>
-    <div class="row">
-      <div class="column">
-        <div class="content">
-          <a href="Film_1.JPG">
-            <img src="Film_1.JPG" style="width:100%">
-          </a>
-        </div>
-      </div>
-      <div class="column">
-        <div class="content">
-          <a href="Film_2.JPG">
-            <img src="Film_2.JPG" style="width:100%">
-          </a>
-        </div>
-      </div>
-      <div class="column">
-        <div class="content">
-          <a href="Fog1.JPG">
-            <img src="Fog1.JPG" style="width:100%">
-          </a>
-        </div>
-      </div>
-      <div class="column">
-        <div class="content">
-          <a href="Fog2.JPG">
-            <img src="Fog2.JPG" style="width:100%">
-          </a>
-        </div>
-      </div>
-      <div class="column">
-        <div class="content">
-          <a href="Council-of_lamposts.JPG">
-            <img src="Council-of_lamposts.JPG" style="width:100%">
-          </a>
-        </div>
-      </div>
-	</div>
 </body>
 
 </html>
