--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 		<div class="row">
 			<h3>3 views of a Hipo on Carlton Street</h3>
 			<p class="comment">This series of photos are the first fruits of my experimentation with B&W photography.
-				I wanted to capture the motion of the light in my arrangement of the photos, along with how the two people captured in the scene moved through it.
+				I wanted to show the motion of differently coloured light through my arrangement of the photos, 
+				along with how the two people captured in the scene moved through it.
 				The location is Carlton street in Hockley, Nottingham.
 				<br/><br/>
 				Camera details: Captured on my Nikon D3100 at 200 ISO, f/11, an aperture of 6.9, 1/40 shutter speed and at a 50mm focal length.
