--- a/index.html
+++ b/index.html
@@ -19,23 +19,52 @@
 
 		<!-- Content of the body-->
 		<h2>Portfolio</h2>
-		<!--Exhibition 1-->
+
+		<!--Exhibition 2-->
 		<div class="row">
-			<h3>3 views of a Hipo on Carlton Street</h3>
-			<p class="comment">This series of photos are the first fruits of my experimentation with B&W photography.
-				I wanted to show the motion of differently coloured light through my arrangement of the photos, 
-				along with how the two people captured in the scene moved through it.
-				The location is Carlton street in Hockley, Nottingham.
+			<h3>We the Party. Oct, 2022.</h3>
+			<p class="comment">
+				I attended the wedding of one of my best friends in my home town of Peterborough. My wife and I had the joy of being accompanied by another one of my
+				best friends and he came along with his girlfriend. There was a moment after the speeches when the two of them were dancing, almost alone, on the floor.
+				Their energy was infectious and I wanted to capture the fun they were having, as well as play around with some cheeky colour manipulations in post.
 				<br/><br/>
-				Camera details: Captured on my Nikon D3100 at 200 ISO, f/11, an aperture of 6.9, 1/40 shutter speed and at a 50mm focal length.
+				Camera details: Captured on my Nikon D3100 at 400 ISO, f/5.6, 1/80 shutter speed and at a 52mm focal length. Edits done in Lightroom Classic.
 		  </p>
 		</div>
 		<div class="row">
-
 			<div class="column">
 				<div class="content">
-					<a href="Three_views_Hipo_3.jpg" target="_blank">
-            <img  src="Three_views_Hipo_3.jpg"	alt="" style="width:100%">
+					<a href="We_the_party_1.jpg" target="_blank">
+            <img  src="We_the_party_1.jpg"	alt="" style="width:100%">
+          </a>
+				</div>
+      </div>
+
+      <div class="column">
+				<div class="content">
+          <a href="We_the_party_2.jpg" target="_blank">
+		       <img src="We_the_party_2.jpg"	alt="" style="width:100%">
+          </a>
+        </div>
+      </div>
+		</div>
+
+		<!--Exhibition 1-->
+		<div class="row">
+			<h3>3 views of a Hipo on Carlton Street. Sep, 2022.</h3>
+			<p class="comment">This series of photos are the first fruits of my experimentation with B&W photography.
+				I wanted to show the motion of differently coloured light through my arrangement of the photos,
+				along with how the two people captured in the scene moved through it.
+				The location is Carlton street in Hockley, Nottingham.
+				<br/><br/>
+				Camera details: Captured on my Nikon D3100 at 200 ISO, f/11, 1/40 shutter speed and at a 50mm focal length.
+		  </p>
+		</div>
+		<div class="row">
+			<div class="column">
+				<div class="content">
+					<a href="Three_views_Hipo_1.jpg" target="_blank">
+            <img  src="Three_views_Hipo_1.jpg"	alt="" style="width:100%">
           </a>
 				</div>
       </div>
@@ -48,8 +77,8 @@
       </div>
       <div class="column">
 				<div class="content">
-          <a href="Three_views_Hipo_1.jpg" target="_blank">
-	          <img src="Three_views_Hipo_1.jpg"	alt="" style="width:100%">
+          <a href="Three_views_Hipo_3.jpg" target="_blank">
+	          <img src="Three_views_Hipo_3.jpg"	alt="" style="width:100%">
           </a>
 				</div>
       </div>
