--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 				along with how the two people captured in the scene moved through it.
 				The location is Carlton street in Hockley, Nottingham.
 				<br/><br/>
-				Camera details: Captured on my Nikon D3100 at 200 ISO, f/11, 1/40 shutter speed and at a 50mm focal length.
+				Camera details: Captured on my Nikon D3100 at 200 ISO, f/11, 1/40 shutter speed and at a 50mm focal length. Edits done in Lightroom Classic.
 		  </p>
 		</div>
 		<div class="row">
